# GlyphFoundry

./: .dockerignore  .env.example  .replit  DEPLOYMENT.md  DIGITAL_OCEAN_DEPLOY.md  Dockerfile  Dockerfile.fixed  Dockerfile.test  INFRASTRUCTURE_CHECKLIST.md  QUICKSTART.md  constellation-demo.html  deploy-to-digitalocean.sh  deploy.sh  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.bak.1758649081  docker-compose.yml.bak.1758687403  edge-ports.override.yml  edge-ssl.override.yml  fix_nginx.sh  healthcheck.sh  package-lock.json  package.json  replit.md  requirements.txt  test_stack.sh
attached_assets/: AutonomousSwarmRegrowth_1759179309616.js  Pasted-The-source-list-for-the-Content-Security-Policy-directive-default-src-contains-an-invalid-source--1759279243328_1759279243329.txt  Schema_1759188932794.js
backend/: .dockerignore  Dockerfile  Dockerfile.bak.1758595626  Dockerfile.bak.1758597593  alembic.ini  gunicorn.conf.py  requirements.txt
db/: __init__.py
deploy-package/: DEPLOYMENT.md  QUICK-START.txt  install-on-droplet.sh  nginx.conf  package.json  quantum-nexus.service
docs/: __init__.py  api.md  architecture-overview.md  architecture.md  deployment.md  development.md  gpu-instancing-strategy.md
edge/: nginx.conf
frontend/: .npmrc  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
native/rust-physics/: Cargo.toml  build.sh
native/rust-physics/src/: lib.rs
native/rust/qce_kernels/bindings/wasm/: Cargo.toml
native/rust/qce_kernels/bindings/wasm/src/: lib.rs
(+240 files in other folders)
