[package]
name = "glyph-physics"
version = "0.1.0"
edition = "2021"
authors = ["Glyph Foundry Team"]
description = "High-performance physics engine for knowledge graph visualization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
